Archive2/d6/e3f3d4be71fcaa/output
main.cpp: In function 'int main(int, char**)':
main.cpp:21:30: error: 'make_unique' is not a member of 'std'
  std::unique_ptr<Object> x = std::make_unique<Object>();
                              ^
main.cpp:21:53: error: expected primary-expression before '>' token
  std::unique_ptr<Object> x = std::make_unique<Object>();
                                                     ^
main.cpp:21:55: error: expected primary-expression before ')' token
  std::unique_ptr<Object> x = std::make_unique<Object>();
                                                       ^
main.cpp:22:32: error: 'make_unique' is not a member of 'std'
  std::unique_ptr<Object[]> y = std::make_unique<Object[]>(10);
                                ^
main.cpp:22:55: error: expected primary-expression before '[' token
  std::unique_ptr<Object[]> y = std::make_unique<Object[]>(10);
                                                       ^
main.cpp:22:56: error: expected primary-expression before ']' token
  std::unique_ptr<Object[]> y = std::make_unique<Object[]>(10);
                                                        ^
